# rocket-starter.rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
cases/simple/: Cargo.toml
data/tera-module/: Cargo.toml.skel
data/tera-module/src/: app.rs  main.rs  shared.rs
data/tera-module/src/app/: test_app.rs
data/tera/src/: main.rs  tests.rs
data/tera/templates/: index.html.tera
data/tera1/: Cargo.toml.skel
data/tera1/src/: main.rs
data/tera1/templates/: index.html.tera
data/tera2/src/: main.rs
src/: main.rs
