[package]
name = "rocket-starter"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to create skeleton for a Rocket-based web application"
keywords = ["cli", "web", "static"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/rocket-starter.rs/"
#homepage = "https://rocket-starter.code-maven.com/"


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

